--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.20",
+    "@mui/material": "^5.15.6",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.7.1",
     "@stripe/react-stripe-js": "^2.4.0",
@@ -26,6 +26,7 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
+    "firebase": "^10.7.2",
     "micro": "^10.0.1",
     "moment": "^2.29.4",
     "next": "14.0.4",
@@ -33,6 +34,7 @@
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
