--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
@@ -25,6 +26,7 @@
     "autoprefixer": "10.4.16",
     "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.1",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
     "firebase": "^10.7.2",
@@ -36,6 +38,7 @@
     "query-string": "^8.1.0",
     "querystring": "^0.2.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
